remove scheme remedial actions and import ARAs from isManual=false
Signed-off-by: Thomas Bouquet <thomas.bouquet@rte-france.com>